Using same travis settings as cascalog